src/test/pass/global_subscript_in_call.ly
list[integer] integer_list = [1, 2, 3]

function f() {
	integer_list[0] = 10
}

f()
